app/src/pages/Explore.css
.explore-wrapper {
  width: 100%;
  height: 100%;
  background-color: #f4f4f4;
  font-family: sans-serif;
  color: #333;
  scrollbar-width: thin;
  scrollbar-color: #e4e4e4 #ffffff;
  box-sizing: border-box;
}

.explore-wrapper * {
  box-sizing: border-box;
}

.explore-container {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  flex-direction: column;
  padding: 10px;
  box-sizing: border-box;
}

.explore-wrapper h1 {
  text-align: center;
  color: #1a1a1a;
}

.explore-wrapper .selected-protein {
  font-weight: bold;
  color: #3b82f6;
  margin-bottom: 0.5rem;
}

.visualization-container {
  display: grid;
  grid-template-columns: 3fr 1fr;
  grid-template-rows: 1fr;
  gap: 1rem;
  align-items: flex-start;
  width: 100%;
  height: 100%;
  min-height: 0; /* Important for nested flex/grid scrolling */
}

.right-panel {
  display: flex;
  flex-direction: column;
  gap: 0.7rem;
  justify-content: flex-start;
  height: 100%;
  width: 100%;
  overflow-y: scroll;
  scrollbar-width: none;
  border-radius: 6px;
}

protspace-scatterplot {
  display: block;
  width: 100%;
  height: 100%;
  border: 1px solid #ccc;
  background-color: #fff;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
}

protspace-control-bar {
  display: block;
  width: 100%;
  margin-bottom: 1rem;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  border-radius: 0.5rem;
}

protspace-legend {
  display: block;
  border: 1px solid #ccc;
  background-color: #fff;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
}

protspace-structure-viewer {
  display: block;
  border: 1px solid #ccc;
  background-color: #fff;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
}

protspace-data-loader:hover {
  transform: translateY(-1px);
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
}

@media (max-width: 1050px) {
  .visualization-container {
    height: calc(100vh - 120px);
    min-height: 0;
  }
}

@media (max-width: 950px) {
  .visualization-container {
    grid-template-columns: 1fr;
    grid-template-rows: 24rem 1fr;
    height: calc(100vh - 120px);
  }

  .right-panel {
    order: -1;
    flex-direction: row;
  }

  protspace-legend {
    height: calc(100%);
  }

  .explore-container {
    padding: 10px 20px;
  }
}

@media (max-width: 550px) {
  .right-panel {
    flex-direction: column;
  }

  .visualization-container {
    grid-template-columns: 1fr;
    grid-template-rows: min-content calc(100vh - 84px);
  }
}

